add style, update gitignore - big commit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'io.gitlab.arturbosch.detekt'
 }
 
 android {
@@ -71,4 +72,8 @@ dependencies {
 
     // constraint layout - like relativeLayout or LinearLayout, but more efficient
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
+    //detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.0.0.M9'
+    //detekt 'io.gitlab.arturbosch.detekt:detekt-formatting:1.0.0.M9'
+
 }
