--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 
-    // for image download (like Picasso and Glide)
-    implementation("io.coil-kt:coil:0.9.2")
+    def glideVersion = "4.12.0"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     // material components
     implementation 'com.google.android.material:material:1.4.0'
