--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:theme="@style/Theme.MDFirst">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.MDFirst.OldSplash">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
